syntax = "proto3";

package proto.hello.v1;

option go_package = "generated/grpc_please/hello/v1";

service ExampleService {
  rpc SayHello (SayHelloRequest) returns (SayHelloResponse);
  rpc Chat (stream ChatRequest) returns (stream ChatResponse);
}

message SayHelloRequest {
  string name = 1;
}

message SayHelloResponse {
  string message = 1;
}

message ChatRequest {
  string user = 1;
  string message = 2;
}

message ChatResponse {
  string user = 1;
  string message = 2;
}